Changes of 6th May 2022

--- a/RTE/src/main/resources/config.properties
+++ b/RTE/src/main/resources/config.properties
@@ -1,178 +1,74 @@
-URL=http://stagingna.nglog.com/
-File=.\\src\\main\\resources\\NA_STG.xls
+URL=http://10.20.104.82:8072/
+File=.\\src\\main\\resources\\RTE_STG.xls
 UserName=automation
 Password=automation
-DEVURL=http://192.168.117.22:8073/login
-DEVUserName=3453101
-DEVPassword=pdoshi
-STGURL=http://stagingna.nglog.com/
-STGUserName=3468901
-STGPassword=pdoshi
-PRODURL=https://netagentgxa.nglog.com/
-PRODUserName=mobile
-PRODPassword=password
-DEVFile=.\\src\\main\\resources\\NA_DEV.xls
-STGFile=.\\src\\main\\resources\\NA_STG.xls
-PRDFile=.\\src\\main\\resources\\NA_PRO.xls
+DEVURL=
+DEVUserName=
+DEVPassword=
+STGURL=
+STGUserName=
+STGPassword=
+PRODURL=
+PRODUserName=
+PRODPassword=
+DEVFile=.\\src\\main\\resources\\RTE_DEV.xls
+STGFile=.\\src\\main\\resources\\RTE_STG.xls
+PRDFile=.\\src\\main\\resources\\RTE_PRO.xls
 
 #======Common=========
-MNXLogo_id=imgNGLLogo
-SiteCantBeReach_xpath=//*[@class=\"error-code\"]
+ClosePopUp_xpath=//*[@ng-click="close()"]
+SuccessMsg_id=success
 NoData_className=dx-datagrid-nodata
-PageCount_className=dx-info
+RLSearch_id=btnSearch
+RLReset_id=btnReset
+
 
 #======UploadDoc=========
-UploadBTN_id=hlkUploadDocument
-PlusSign_id=hlkaddUpload
-DocName_id=txtDocName
-SelectFile_id=btnSelectFile
-InputFile_id=inputfile
-BTNUpload_id=btnUpload
-ErrorMsg_xpath=//*[@ng-bind=\"RenameFileErrorMsg\"]
-BTNOk_id=btnOk
+
 
 
 
 #======Login=========
 UserName_id=inputUsername
 Password_id=inputPassword
-Login_id=idsigninbutton
+Login_id=btnLogin
 LogOut_linkText=LOGOUT
-
-#======ContactUS=========
-LogOutDiv_xpath=//div[contains(@class,'userthumb')]
-ContactUS_linkText=Contact Us
-Comments_name=txtComments
-Submit_id=btnSubmit
-SuccessMsg_xpath=//b[@class=\"ng-binding\"]
-
-#======AgentTSATraining=========
-AgentTSA_linkText=Agent TSA Training
-AnnualTSA_linkText=Annual TSA Training Presentation(Authorized Representative Version)
-PwdDialogue_id=dialog
-PwdInput_id=input
-DialogueSubmit_id=submit
-DialError_id=error
-AnnualTSATest_linkText=Annual TSA Test(Authorized Representative Version)
-
-#======AgentElevatedRisk=========
-AgentElevated_linkText=Agent Elevated Risk Training
-ElevatedRisk_linkText=Elevated Risk Physical Search 2.0A Training Presentation
-ElevatedRiskTest_linkText=Elevated Risk Physical Search 2.0A Test
+LogOutMsg_xpath=//*[@ng-bind="LogoutMessage"]
 
 
-#======TaskLog=========
-Operations_id=idOperations
-TaskLog_linkText=Task Log
-TLBasicSearch_id=txtBasicSearch
-TLBSearchBTN_id=btnSearch3
-TLPickUpBox_xpath=//*[contains(@class,'pickupbx')]
-TLCloseTab_id=idclosetab
-TLCloseIcon_id=idcloseicon
-TLIconClose_id=idiconclose
-TLAdSearchTab_id=AdvancedASNSearch
-TLADOrderType_id=cmbOrderType1
-TLADSearchBTN_id=btnSearch1
-TLStage_xpath=//*[contains(@class,'ng-pristine')]//h3
-TLNextTask_id=idddlnexttask
-TLNextTaskCkAll_id=chkAllidddlnexttask
-TLService_id=txtServiceId1
-TLExpFrom_id=txtExpCompFromDate1
-TLExpTo_id=txtExpCompToDate1
-TLCustomer_id=txtCustCode1
-TLPickUp_id=txtPickup1
-TLASNType_id=cmbASNType1
-TLASNReplenish_xpath=//label[contains(text(),' Replenishment')]
-TLRecToPutAway_linkText=RECEIVE TO PUTAWAY
-TLPartTable_xpath=//*[@id=\"parttable\"]/tbody
-TLPTSerialNo_id=txtSerialNo
-TLPTAccQty_id=txtReceivedQty
-TLPTSave_id=idsaveicon
-TLPTUpdate_id=idupdateicon
-TLSuccess_id=successid
-TLReference_id=txtReference1
-TLTotalJob_xpath=//*[@ng-bind=\"TotalJob\"]
-TLQuarn_linkText=Quarantine
-TLQFSL_id=cmbFSL
-TLQAccount_xpath=//*[@id="cmbAccount"]
-TLQField1_id=UnExpField1
-TLQField2_id=UnExpField2
-TLQField3_id=UnExpField3
-TLQField4_id=UnExpField4
-TLQSerailNo_id=UnExpSerialNo
-TLQCategory_id=cmbCategory
-TLQCarrier_id=cmbCarrier
-TLQCarrTracking_id=txtTrackingNo
-TLQRef_id=txtAsnRef
-TLQReason_id=cmbQuarantineReasons
-TLQNotes_id=txtNotes
-TLQSubmit_id=btnAddToQuarantineDetails
-TLSuccMsg_id=lblSuccessMsg
-TLQClose_id=idanchorclose
-TLRefresh_id=refreshicon
-TLMergeRTETab_id=btnMerge3
-TLMRTEWarning_xpath=//*[@ng-show=\"isWarningRTE\"]//div[contains(@class,'well-sm')]
-TLMRTECond_xpath=//*[@ng-show=\"isWarningRTE\"]//ul
-TLMergeClose_className=ngdialog-close
-TLMRTESelectRow_xpath=//*[@class=\"dx-datagrid-content\"]//tr[1]//div
-TLMergeRTEBTN_id=btnMerge3
-TLMRTERoutList_id=drpRouteList
-TLMergeSave_id=btnsave
-TLMergeCancel_id=btnCancel
-TLIconCls_id=iconclose
-TLOperationTab_id=operation
-TLOSearch_id=txtBasicSearch2
-TLOSearchBTN_id=btnGXNLSearch2
-TLInventoryTab_id=inventory
-TLInvSearch_id=txtBasicSearch
-TLInvSearchBTN_id=btnSearch2
-CCATTStage_xpath=//h3[@class="panel-title"]
-CCATotalParts_xpath=//strong[@class="ttl_sm font10 ng-binding"]
-CCATotalParts2_xpath=//strong[@class="ttl_sm font10"]
-RemoveZrQTY_id=idremovezeroqty
-CCACCATable_xpath=//*[@class="dx-datagrid-content"]//table/tbody
-CCAstatus_xpath=//td[contains(@aria-label,'Column Result')]
-CCASTockQty_xpath=//div[@class='dx-datagrid-content']//tr[1]/td[9]
-CCAExport_id=idexport
-CCAImport_id=idimport
-CCAImErr_id=errorid
-CCAExcepView_id=idexceptionview
-CCAEVEmail_id=idtxtemail
-CCAEVESend_id=idbtnsend
-CCAEVESucc_id=success
-CCAEEFail_id=idValidationPopup
-CCAEExport_id=idbtnsubmit
-CCASave_id=idiconsave
-CCAClose_id=idcloseicon
-CCAtID_xpath=//div/span[@class="pull-left"]
-CCACycleRCount_id=MandatoryCycleRecount
-CCADialogue_className=modal-dialog
-CCADMessage_xpath=//*[contains(@class,"modal-body")]
-CCADOK_id=iddataok
-CCARExpandAll_id=setexpand
-CCARCollapseAll_id=setcollapse
-CCARCollImag_id=iconcollapseimg
-CCARTableB_xpath=//*[@id="parttable"]//table[@id="idsegmentexpand"]/tbody//tr	
-CCAEndCycle_id=idendcycle
-TLDClose_id=btnclsdelivery
-TLCombinedTab_id=combined
-TLRTETab_xpath=//*[@ng-model=\"RTE\"]
-TLRTESearch_id=txtBasicSearchRTE
-TLRTESearchBTN_id=btnRTESearch2
-TLRTECol15_xpath=//*[@id=\"idRTEList\"]//td[15]
-TLRTEMemo_id=Memo0
-TLRTEMemoIn_id=txtMemoNA
-TLRTEMSave_id=btnAgentMemoNA
-TLRTEMClose_id=idanchorclose
-TLRTEPrintL_linkText=Print Label
-TLRTEPL46_linkText=Print 4x6 Label
+#=======ImportRoute============
+Tools_id=a_tools
+ToolsDiv_xpath=//*[@class="OpenCloseClass dropdown open"]
+ImportRoute_id=a_ImportRoute
+IRBrowse_id=btnBrowse
+IRSelectFile_id=inputfile
+IRUpload_id=btnUpload
+IRUploadPopUp_xpath=//*[@ng-form="uploadfileForm"]
+IRContinue_id=btnContinue
 
-#======OrderSearch=========
+
+#=======RouteList============
+RouteList_id=a_RouteWorkList
+RouteList_linkText=Route List
+RLRWIDInput_id=txtRouteWorkId
+RLRWTrackingNo_xpath=//*[contains(@aria-label, 'Column RW Tracking#')]
 
 
 
-
-
+#=======TaskLog============
+OperationsTab_id=a_operations
+TaskLog_id=a_TaskLog
+TLSearchAllJob_id=hlkOrderSearch
+TLSAJAdvance_id=AdvancesSearch
+TLSARoutTrackNo_id=txtRouteTrackingNum
+TLSAJobID_id=lblJobIdValue_0
+TLSAPicUpID_id=lblPickupIdValue_0
+TLSABOLNo_id=lblBOLNumValue_0
+TLJobSTatus_id=idJobOverview
+TLJobstatusID_id=GreyTick
+TLBasicSearch_id=txtContains
+TLEXWSave_id=btnexit
+TLGlobSearch_id=btnGlobalSearch
 
 
 
