--- a/RTE/src/main/resources/log4j.properties
+++ b/RTE/src/main/resources/log4j.properties
@@ -9,9 +9,9 @@ log4j.appender.TTCC=org.apache.log4j.RollingFileAppender
 log4j.appender.HTML=org.apache.log4j.FileAppender
  
 // Here we define log file location
-log4j.appender.R.File=./Report/log/NetAgent.log
-log4j.appender.TTCC.File=./Report/log/NetAgentApp.log
-log4j.appender.HTML.File=./Report/log/NetAgentLog.html
+log4j.appender.R.File=./Report/log/RTESmoke.log
+log4j.appender.TTCC.File=./Report/log/RTEJobSmoke.log
+log4j.appender.HTML.File=./Report/log/RTESmoke.html
  
 // Here we define the layout and pattern
 log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
