Changes of 9th May 2022

--- a/RTE/src/main/resources/config.properties
+++ b/RTE/src/main/resources/config.properties
@@ -1,5 +1,5 @@
 URL=http://10.20.104.82:8072/
-File=.\\src\\main\\resources\\RTE_STG.xls
+File=.\\src\\main\\resources\\RTE_STG.xlsx
 UserName=automation
 Password=automation
 DEVURL=
@@ -64,11 +64,30 @@ TLSARoutTrackNo_id=txtRouteTrackingNum
 TLSAJobID_id=lblJobIdValue_0
 TLSAPicUpID_id=lblPickupIdValue_0
 TLSABOLNo_id=lblBOLNumValue_0
+TLJobstatusAct_xpath=//div[contains(@class,'memopartActive')][text()='Job Status']
+TLJobstatusDsb_xpath=//div[contains(@class,'disabled')][text()='Job Status']
 TLJobSTatus_id=idJobOverview
-TLJobstatusID_id=GreyTick
+TLAcknoldge_id=GreyTick
 TLBasicSearch_id=txtContains
 TLEXWSave_id=btnexit
 TLGlobSearch_id=btnGlobalSearch
+TLStageLable_id=lblStages
+TLAlertstages_id=AlertStages
+TLSendPUAl_id=WhiteTickAlert
+TLAlValidation_id=idValidationforMain
+TLSpokeWith_id=txtSpokeWith
+TLShipDetail_id=routetable
+TLCOnfPU_id=PUDLStopsWhiteTick
+TLActPUpTime_id=txtActPuTime_0
+TLActPuDate_id=txtActpuDate_0
+TLACPTZone_xpath=//*[@ng-bind="shipmentdtls.ActpuTz"]
+TLConfDEL_id=PUDLStopsWhiteTick
+TLACDELZone_xpath=//*[@ng-bind="shipmentdtls.ActdlTz"]
+TLActDelTime_id=txtActDlTime_0
+TLActDelDate_id=txtActdlDate_0
+TLSign_id=txtsign
+
+
 
 
 
