Changes of 10th May 2022

--- a/RTE/src/main/resources/config.properties
+++ b/RTE/src/main/resources/config.properties
@@ -21,7 +21,7 @@ SuccessMsg_id=success
 NoData_className=dx-datagrid-nodata
 RLSearch_id=btnSearch
 RLReset_id=btnReset
-
+Close_id=idanchorclose
 
 #======UploadDoc=========
 
@@ -86,6 +86,88 @@ TLACDELZone_xpath=//*[@ng-bind="shipmentdtls.ActdlTz"]
 TLActDelTime_id=txtActDlTime_0
 TLActDelDate_id=txtActdlDate_0
 TLSign_id=txtsign
+
+#=======ShipmentDetails
+TLEdShip_id=lblShipmentTrackNo
+TLESPicIns_id=txtNote
+TLESDelIns_id=txtDelNote
+TLESSave_id=hlkSave
+TLESViewAddMemo_id=hlkViewAddMemo
+TLESMemoPopup_id=MemoPopup
+TLECancelOrder_id=hlkCancel
+TLESMvCust_id=chkbCustView
+TLESMemo_id=txtMemo
+TLESMCToPic_id=chkbCopyToPickup
+TLESMCtoIte_id=chkbCopyToItinerary
+TLESMCustTab_id=btnCustomerMemo
+TLESMAgentTab_id=btnAgentMemo
+TLESMAirlTab_id=btnAirlineMemo
+TLESMIntTab_id=btnInternalMemo
+TLESMAll_id=idAll
+TLESMCustLink_id=idCustomer
+TLESMAgentLink_id=idAgent
+TLESMAirlineLink_id=idAirline
+TLESMInterLink_id=idInternal
+TLESMemoClose_id=idMemoClose
+TLESMemoList_id=idQuoteMemoList
+
+
+#=======Upload
+TLESUpload_id=hlkRWViewDocuments
+AddUpload_id=hlkaddUpload
+DocName_id=txtDocName
+DocDate_id=txtDocDate
+DocType_id=txtDocType
+CUstView_id=CustviewRadio
+AgentView_id=AgentviewRadio
+UploadFile_id=btnSelectFile
+SelectFile_id=inputfile
+Uploadbtn_id=btnUpload
+UploadClose_xpath=//*[@ng-click="close()"]
+RenameFile_xpath=//*[@ng-bind="RenameFileErrorMsg"]
+DocExist_xpath=//*[@id="scrollboxUpload"]/div[contains(@class,'tablerowdevide')]
+DelUploadFile_id=hlkDelUpload
+DelConfMes_xpath=//*[contains(@class,'well-sm')]
+DelConfYes_xpath=//*[@ng-click="ok()"]
+UploadSaveClose_id=btnOk
+
+#=======ViewNotification
+VNotify_id=hlkRWViewNotification
+VNotifList_id=scrollboxNotificationList
+VNotiFView_id=hlkViewNotification
+VNotiConEmail_id=Email
+VNotiConEmailInp_id=txtViaEmail
+VNotiConFax_id=Fax
+VNotiConSend_id=btnSend
+VNotiConPrint_id=btnPrint
+VNotiConClickHere_xpath=//a[contains(text(),'Click Here')]
+VNotiConClose_id=idanchorclose
+
+#=======Notify
+Notify_id=hlkRWNotify
+AddNotify_id=hlkaddNotify
+NOtVia_id=txtViaEmail
+NotHow_id=ddlNotifyVia
+NotCalled_id=txtCalled
+NotRight_id=hlkRight
+NotLeft_id=hlkLeft
+NotUp_id=hlkUP
+NotDown_id=hlkDown
+NotifySave_id=hlkSaveNotify
+NotifyCanc_id=hlkCanclNotify
+NotifyOK_id=btnOK
+NotifyResetOQDT_id=btnResendQDT
+NotifyCancel_id=btnCancel
+NotifyCons_id=NotifyRadio2
+NotifyShip_id=NotifyRadio1
+RequestNot_id=lstRequested
+AvailbleNot_id=lstAvailable
+AvailAllNot_xpath=//*[@id=\"lstRequested\"]//option
+NotifyEdit_id=hlkNotifydtl
+NotifyDelete_id=hlkDelNotify
+
+
+
 
 
 
