Changes of 11th May 2022

--- a/RTE/src/main/resources/config.properties
+++ b/RTE/src/main/resources/config.properties
@@ -92,6 +92,10 @@ TLEdShip_id=lblShipmentTrackNo
 TLESPicIns_id=txtNote
 TLESDelIns_id=txtDelNote
 TLESSave_id=hlkSave
+
+
+#=======Add/View Memo
+TLSMemo_xpath=//*[@id="lblMemo"]/a
 TLESViewAddMemo_id=hlkViewAddMemo
 TLESMemoPopup_id=MemoPopup
 TLECancelOrder_id=hlkCancel
@@ -113,6 +117,7 @@ TLESMemoList_id=idQuoteMemoList
 
 
 #=======Upload
+TLSUpload_xpath=//*[@id="lblAttachment"]/a
 TLESUpload_id=hlkRWViewDocuments
 AddUpload_id=hlkaddUpload
 DocName_id=txtDocName
@@ -141,11 +146,13 @@ VNotiConFax_id=Fax
 VNotiConSend_id=btnSend
 VNotiConPrint_id=btnPrint
 VNotiConClickHere_xpath=//a[contains(text(),'Click Here')]
-VNotiConClose_id=idanchorclose
+VNotiConClose_xpath=//*[@ng-form="ViewContentform"]//a[@id="idanchorclose"]
+VNotifiClose_xpath=//*[@ng-click="closeViewNotification()"]
+
 
 #=======Notify
 Notify_id=hlkRWNotify
-AddNotify_id=hlkaddNotify
+AddNotify_xpath=//*[@id="hlkaddNotify"]/i
 NOtVia_id=txtViaEmail
 NotHow_id=ddlNotifyVia
 NotCalled_id=txtCalled
@@ -165,6 +172,26 @@ AvailbleNot_id=lstAvailable
 AvailAllNot_xpath=//*[@id=\"lstRequested\"]//option
 NotifyEdit_id=hlkNotifydtl
 NotifyDelete_id=hlkDelNotify
+
+#=======QC
+TLSQC_xpath=//*[@id="lblQcs"]/a
+TLQCTab_id=idIssueManagement
+TLQCAddNew_id=idissueflag
+TLQCCust_xpath=//*[@id="idchkbMissedFlight"][text()='Customer']
+TLQCInvAdd_xpath=//*[@id="idchkbMissedFlight"][text()='Invalid Address']
+TLQCIssDesc_id=txtNote
+TLQCSave_id=btnSave
+TLQCConfirmNote_id=idobjresolution0
+TLQCStatus_xpath=//*[contains(@ng-model,"QCStatus")]
+TLQCUpdate_id=btnResolve0
+TLQCSuccMsg_id=successMsgForQC
+TLQCExitWSave_id=btnexit
+
+#=======UnMerge
+TLSUnMerge_xpath=//*[@id="lblUnmerge"]/a
+TLUnMergeMsg_xpath=//div[contains(text(),'RTE job has only')]
+TLUnMergeOK_id=btnOk
+
 
 
 
