Changes of 12th May 2022

--- a/RTE/src/main/resources/config.properties
+++ b/RTE/src/main/resources/config.properties
@@ -86,6 +86,8 @@ TLACDELZone_xpath=//*[@ng-bind="shipmentdtls.ActdlTz"]
 TLActDelTime_id=txtActDlTime_0
 TLActDelDate_id=txtActdlDate_0
 TLSign_id=txtsign
+TLEditJob_id=idEditOrder
+
 
 #=======ShipmentDetails
 TLEdShip_id=lblShipmentTrackNo
@@ -195,11 +197,32 @@ TLUnMergeOK_id=btnOk
 
 
 
+#=======MEMO-Header
+HMemo_id=hlkMemo
+HMAuditHsTab_id=spnAuditHistory
+HMemoCount_xpath=//*[@ng-bind="MemoCount"]
+HMemoClose_id=idMemoClose
+
+#=======ViewRATE-Header
+HVRate_id=hlkMap
+HVRateDetails_xpath=//*[@class="dx-datagrid-content"]//tr[contains(@class,'dx-data-row')]
+HVRDChargeName_xpath=//td[contains(@aria-label,'Charge Name,')]
+HVRDAmount_xpath=//td[contains(@aria-label,'Amount ')]
+HVRDNote_xpath=]//td[contains(@aria-label,'Note')]
+HVRDScheduler_xpath=//td[contains(@aria-label,'Scheduler')]
+HVRDRateProgID_xpath=//td[contains(@aria-label,'RateProgramId')]
+HVRDTotalAm_xpath=//td[contains(@aria-label,'Amount ')]/div[contains(text(),'Total')]
+HVRDTotalR_xpath=//label[contains(text(), 'Total Revenue')]
+HVRDTotal_xpath=//*[contains(@class,'row form-group')]/div[@class="row form-group"]
 
 
+#=======PrintLabel-Header
+HPrintLabel_id=hlkPrintLabel
 
 
-
+#=======RouteDetails
+TLRouteDetails_xpath=//*[@id="lblShipmentdtl"][text()='Route Details']
+TLShipMentDetails_xpath=//*[@id="lblShipmentdtl"][text()='Shipment Detail']
 
 
 
