Changes of 13th May 2022

--- a/RTE/src/main/resources/config.properties
+++ b/RTE/src/main/resources/config.properties
@@ -223,6 +223,24 @@ HPrintLabel_id=hlkPrintLabel
 #=======RouteDetails
 TLRouteDetails_xpath=//*[@id="lblShipmentdtl"][text()='Route Details']
 TLShipMentDetails_xpath=//*[@id="lblShipmentdtl"][text()='Shipment Detail']
+TLEditStopSeq_xpath=//a[text()='Edit Stop Sequence']
+TLESSPUStop_id=txtPUStop
+TLESSDelStop_id=txtDelStop
+TLAddStopSeq_xpath=//a[text()='+Add Stop Sequence']
+TLASSPUStop_xpath=//*[@class="input-group"]/input[@id="txtPuStop"]
+TLRecal_xpath=//a[text()='Re Calculate']
+TLActRate_id=lblActualRate
+TLCustCharges_id=lblCustomerCharges
+CChargeCombo_id=cmbCharge
+CCharge_id=txtRealCostchargeamount
+CCAddCharge_id=GreenAdd
+TLSaveChanges_id=btnSaveChanges
+
+
+
+
+
+
 
 
 
