Changes of Config file

--- a/RTE/src/main/resources/config.properties
+++ b/RTE/src/main/resources/config.properties
@@ -1,19 +1,28 @@
+
+Env=Pre-Prod
 URL=http://10.20.104.82:8072/
+
 File=.\\src\\main\\resources\\RTE_STG.xlsx
-UserName=automation
-Password=automation
+
+
 DEVURL=
 DEVUserName=
 DEVPassword=
-STGURL=
-STGUserName=
-STGPassword=
-PRODURL=
-PRODUserName=
-PRODPassword=
+
+
+STGURL=http://10.20.104.82:8072/
+STGUserName=automation
+STGPassword=automation
+
+
+PREPRODURL=http://10.20.104.82:7072/
+PREPRODUserName=automation
+PREPRODPassword=automation
+
+
 DEVFile=.\\src\\main\\resources\\RTE_DEV.xls
-STGFile=.\\src\\main\\resources\\RTE_STG.xls
-PRDFile=.\\src\\main\\resources\\RTE_PRO.xls
+STGFile=.\\src\\main\\resources\\RTE_STG.xlsx
+PrePRODFile=.\\src\\main\\resources\\\RTE_PrePROD.xlsx
 
 #======Common=========
 ClosePopUp_xpath=//*[@ng-click="close()"]
