Changes of 18th May 2022

--- a/RTE/src/main/resources/config.properties
+++ b/RTE/src/main/resources/config.properties
@@ -1,5 +1,5 @@
 
-Env=Pre-Prod
+Env=STG
 URL=http://10.20.104.82:8072/
 
 File=.\\src\\main\\resources\\RTE_STG.xlsx
@@ -31,6 +31,7 @@ NoData_className=dx-datagrid-nodata
 RLSearch_id=btnSearch
 RLReset_id=btnReset
 Close_id=idanchorclose
+Error_id=errorid
 
 #======UploadDoc=========
 
@@ -200,11 +201,12 @@ TLQCExitWSave_id=btnexit
 
 #=======UnMerge
 TLSUnMerge_xpath=//*[@id="lblUnmerge"]/a
+TLEJUnmerge_xpath=//a[text()='Unmerge']
 TLUnMergeMsg_xpath=//div[contains(text(),'RTE job has only')]
 TLUnMergeOK_id=btnOk
-
-
-
+TLUnMergeSave_id=btnsave
+TLUNMSuccMSG_id=successMsgRTE
+TLUnMergeCancel_id=btnCancel
 
 #=======MEMO-Header
 HMemo_id=hlkMemo
@@ -238,12 +240,43 @@ TLESSDelStop_id=txtDelStop
 TLAddStopSeq_xpath=//a[text()='+Add Stop Sequence']
 TLASSPUStop_xpath=//*[@class="input-group"]/input[@id="txtPuStop"]
 TLRecal_xpath=//a[text()='Re Calculate']
-TLActRate_id=lblActualRate
+TLActRate_xpath=//*[contains(@class,'col-lg-12 col-sm-12 col-md-12')]//div[contains(@class,'form-group')]//label[@id="lblActualRate"]
 TLCustCharges_id=lblCustomerCharges
 CChargeCombo_id=cmbCharge
+ChargeSpan_xpath=//span[contains(@ng-if,'RouteProcessingBO')]
 CCharge_id=txtRealCostchargeamount
 CCAddCharge_id=GreenAdd
 TLSaveChanges_id=btnSaveChanges
+CCDelete_id=imgMinus
+
+
+#=======AddStopSquence
+ASPicStop_name=txtPuStop
+ASDelStop_name=txtDelStop
+ASDCompany_id=txtDelCompany
+ASDAdd_id=txtDelAddressLine1
+ASDZipCode_id=txtDLZipcode
+ASCZoneID_xpath=//*[contains(@ng-bind,'SchPudttmTz')]
+ASDSCHDate_id=txtDelSCHACTDate
+ASDSCHTime_id=txtDelSCHACTTime
+ASDQDDate_id=txtDelqtDate
+ASDQDTime_id=txtDelqtTime
+ASDPweight_id=txtpWeight_RWShipmentdetails
+ASDPLength_id=txtlength_RWShipmentdetails
+ASDPWidth_id=txtwidth_RWShipmentdetails
+ASDPHeight_id=txtheight_RWShipmentdetails
+ASSave_id=hlkSave
+ASDPUpTime_id=txtPUSCHACTTime
+ASDPUDate_id=txtPUSCHACTDate
+ASRequMsg_xpath=//*[@ng-message="required"]
+ASDPUPhone_id=txtPhone
+
+
+
+
+
+
+
 
 
 
