Final changes of 20th May 2022

--- a/RTE/src/main/resources/config.properties
+++ b/RTE/src/main/resources/config.properties
@@ -129,7 +129,7 @@ TLESMemoList_id=idQuoteMemoList
 
 
 #=======Upload
-TLSUpload_xpath=//*[@id="lblAttachment"]/a
+TLSUpload_xpath=//a[contains(@ng-click,'UploadDocument')][text()='Upload']
 TLESUpload_id=hlkRWViewDocuments
 AddUpload_id=hlkaddUpload
 DocName_id=txtDocName
@@ -193,7 +193,8 @@ TLQCCust_xpath=//*[@id="idchkbMissedFlight"][text()='Customer']
 TLQCInvAdd_xpath=//*[@id="idchkbMissedFlight"][text()='Invalid Address']
 TLQCIssDesc_id=txtNote
 TLQCSave_id=btnSave
-TLQCConfirmNote_id=idobjresolution0
+TLQCConfirmNote0_id=idobjresolution0
+TLQCConfirmNote1_id=idobjresolution1
 TLQCStatus_xpath=//*[contains(@ng-model,"QCStatus")]
 TLQCUpdate_id=btnResolve0
 TLQCSuccMsg_id=successMsgForQC
