Changes of 23rd May 2022

--- a/RTE/src/main/resources/config.properties
+++ b/RTE/src/main/resources/config.properties
@@ -273,16 +273,27 @@ ASRequMsg_xpath=//*[@ng-message="required"]
 ASDPUPhone_id=txtPhone
 
 
+#=======MAP
+MaForm_id=mapRw
+MapFullS_xpath=//button[contains(@aria-label,'fullscreen view')]
+MapDetails_xpath=//*[@class="MapMsgGraybg"]//label
+MapSatelte_xpath=//button[text()='Satellite']
 
-
-
-
-
-
-
-
-
-
+#=======PickUp Driver
+PDEdit_id=hlkedit
+PDAgent_className=modal-dialog modal-md
+PDCourierID_id=txtCourierId
+PDSearch_id=btnSearch
+PDAgents_xpath=//*[@id=\"scrollboxEditAgent\"]//a[contains(@id,'AgentId')]
+PDAgentKey_id=txtAgentKey
+PDHeavyWchb_id=chkbHeavyWeight
+PDTSAchb_id=chkbTSA
+PDDSXTSAchb_id=chkbFDXTSA
+PDERCchb_id=chkbEleRiskCert
+PDSearchchb_xpath=//*[@class="row form-group"]//input[@type="checkbox"]
+PDNoRecord_id=idValidationPopup
+PDAgentValue_id=lblAgentIdValue
+PDVehicles_xpath=//*[contains(@class,'form-group')]//a[contains(@ng-repeat,'vehicle in task')]
 
 
 
