Changes of 25th may 2022

--- a/RTE/src/main/resources/config.properties
+++ b/RTE/src/main/resources/config.properties
@@ -63,6 +63,112 @@ RouteList_linkText=Route List
 RLRWIDInput_id=txtRouteWorkId
 RLRWTrackingNo_xpath=//*[contains(@aria-label, 'Column RW Tracking#')]
 
+RLCreateR_xpath=//*[@title="Create Route Work"]
+RLRWID_id=txtRouteWorkId
+RLRWIDROnly_xpath=//*[@id="txtRouteWorkId"][@readonly]
+RLRWName_id=txtRouteWorkName
+RLRWCust_id=txtCustCode
+RLRWRef2_id=txtRouteWorkRef2
+RLRWRef4_id=txtRouteWorkRef4
+RLRWManifest_id=txtRouteWorkEmail
+RLRWDeclaredV_id=txtDeclaredValue
+RLRWFlatRate_id=txtFlateRate
+RLRWStartDate_id=txtStartDate
+RLRWEndDate_id=txtEndDate
+RLRWFirstGDate_id=txtFirstGenerationDate
+RLRWGTimeHr_id=cmbFirstGenerationHour
+RLRWGTimeMin_id=cmbFirstGenerationMinute
+RLRWGAmPm_id=cmbFirstGenerationAMPM
+RLRWGeRoute_id=txtGenerateRoute
+RLRWNoOfPkg_id=txtRoutePieces
+RLRWCommodity_id=txtRouteCommodity
+RLRWLength_id=txtRouteLength
+RLRWHeight_id=txtRouteHeight
+RLRWWidth_id=txtRouteWidth
+RLRWWeight_id=txtRouteActWt
+RLRWDimWeight_id=txtRouteRateWt
+RLRWTotalWeight_id=txtRouteTotalActWt
+RLRWToDimWeight_id=txtRouteTotalRateWt
+RLRWReadyTimeHr_id=cmbReadyHour
+RLRWRTMin_id=cmbReadyMinute
+RLRWRTAmPm_id=cmbReadyAMPM
+RLRWschedEndTimeHr_id=cmbCommitHour
+RLRWSchedETMin_id=cmbCommitMinute
+RLRWSchedAmPm_id=cmbCommitAMPM
+RLRWRecDaily_id=idDaily
+RLRWRecWeekly_id=idWeekly
+RLRRWRecMonthly_id=idMonthly
+RLRWDailyDays_id=txtDaysDaily
+
+RLRWReturnsection_xpath=//*[text()="2. Return Undeliverable Shipments To"]
+RLRWUnDComp_id=txtUDCompanyName
+RLRWUnDContact_id=txtUDContactName
+RLRWUnDAdd1_id=txtUDAddrLine1
+RLRWUnDZip_id=txtUDZipcode
+RLRWUnDCity_id=cmbUDCity
+RLRWUnDState_id=txtUDStateAbbr
+RLRWUnDPhone_id=txtUDPhone
+RLRWUnDDelInst_id=txtUDDeliveryInst
+
+RLRWShipDSection_xpath=//*[text()="3. Shipment Details"]
+RLRWSDFromStSeq_id=txtFromStopSeq
+RLRWSDFrComp_id=txtFromCompany
+RLRWSDFrContName_id=txtFromContact
+RLRWSDFrAddLine1_id=txtFromAddr1
+RLRWSDFrZip_id=txtFromZip
+RLRWSDFrCity_id=cmbFromCity
+RLRWSDFrState_id=txtFromStateAbbr
+RLRWSDFrPhone_id=txtFromPhone
+RLRWSDFrChRes_id=chkFromRes
+RLRWSDFrPInst_id=txtPUInst
+
+RLRWSDToStSeq_id=txtToStopSeq
+RLRWSDToComp_id=txtToCompany
+RLRWSDToContName_id=txtToContact
+RLRWSDToAddLine1_id=txtToAddr1
+RLRWSDToZip_id=txtToZip
+RLRWSDToCity_id=cmbToCity
+RLRWSDToState_id=txtToStateAbbr
+RLRWSDToPhone_id=txtToPhone
+RLRWSDToChRes_id=chkToRes
+RLRWSDToPInst_id=txtDelInst
+
+RLRWPIPakg_id=txtPieces
+RLRWPIComm_id=txtContents
+RLRWPILen_id=txtLength
+RLRWPIWid_id=txtWidth
+RLRWPIHt_id=txtHeight
+RLRWPIWeight_id=txtActWt
+RLRWPIDimWt_id=txtRateWt
+RLRWPITotalDWt_id=txtTotalRateWt
+RLRWPITotalWt_id=txtTotalActWt
+RLRWPIRTimeHr_id=cmbShipmentReadyHour
+RLRWPIRTimeMin_id=cmbShipmentReadyMinute
+RLRWPIRTimeAmPm_id=cmbShipmentReadyAMPM
+RLRWPIRef1_id=txtRouteWorkRef1
+RLRWPIRef3_id=txtRouteWorkRef3
+
+RLRWAddShip_id=btnAddShipment
+RLRWCancel_id=btnCancel
+RLRWSaveAsDraft_id=btnDraft
+RLRWActivNow_id=btnActive
+RLRWShipRow_xpath=//*[@class="dx-datagrid-content"]//tbody//tr[contains(@class,'dx-data-row')]
+RLRWEditShip_id=btnEdit
+RLRWEditPUSTop_xpath=//input[@role="spinbutton"]
+RLRWEditSHipUpdateAll_id=btnUpdate
+RLRWEShipCancel_id=btnCancelStop
+RLRWShipEdit_id=hrfActEdit
+RLRWShipDelete_id=hrfActDelete
+RLRWDeleteMsg_xpath=//div[text()='Are you sure want to delete this shipment?']
+RLRWDeleteYes_xpath=//button[text()='Yes']
+RLRWDeleteNo_xpath=//button[text()='No']
+
+
+RLRWSuccMsg_id=SuccessMsgid
+
+
+
+
 
 
 #=======TaskLog============
@@ -294,6 +400,9 @@ PDSearchchb_xpath=//*[@class="row form-group"]//input[@type="checkbox"]
 PDNoRecord_id=idValidationPopup
 PDAgentValue_id=lblAgentIdValue
 PDVehicles_xpath=//*[contains(@class,'form-group')]//a[contains(@ng-repeat,'vehicle in task')]
+PDNameDrp_id=cmbDriverName
+PDContact_id=txtDriverNo
+PDTollCon_id=cmbTollConcession
 
 
 
