--- a/RTE/pom.xml
+++ b/RTE/pom.xml
@@ -185,6 +185,12 @@
 			<artifactId>webdriver-factory</artifactId>
 			<version>4.3</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
+		<dependency>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-compiler-plugin</artifactId>
+			<version>3.8.1</version>
+		</dependency>
 
 	</dependencies>
 	<build>
@@ -221,6 +227,7 @@
 					</systemPropertyVariables>
 				</configuration>
 			</plugin>
+
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.1</version>
@@ -229,6 +236,7 @@
 					<target>1.8</target>
 				</configuration>
 			</plugin>
+
 		</plugins>
 	</build>
 	<!-- profiles -->
