Changes of 27th May 2022

--- a/RTE/src/main/resources/config.properties
+++ b/RTE/src/main/resources/config.properties
@@ -176,6 +176,8 @@ RLSave_id=btnSaveRouteDetails
 OperationsTab_id=a_operations
 TaskLog_id=a_TaskLog
 TLSearchAllJob_id=hlkOrderSearch
+TLOrderRFrom_id=txtOrderRange
+TLOrderRTo_id=txtOrderRangeTo
 TLSAJAdvance_id=AdvancesSearch
 TLSARoutTrackNo_id=txtRouteTrackingNum
 TLSAJobID_id=lblJobIdValue_0
