Changes of 1st June 2022

--- a/RTE/src/main/resources/config.properties
+++ b/RTE/src/main/resources/config.properties
@@ -28,6 +28,7 @@ PrePRODFile=.\\src\\main\\resources\\\RTE_PrePROD.xlsx
 ClosePopUp_xpath=//*[@ng-click="close()"]
 SuccessMsg_id=success
 NoData_className=dx-datagrid-nodata
+NODataTL_xpath=//*[@class="form-group ng-scope"]
 RLSearch_id=btnSearch
 RLReset_id=btnReset
 Close_id=idanchorclose
