Changes if 2nd Jun 2022

--- a/RTE/src/main/resources/config.properties
+++ b/RTE/src/main/resources/config.properties
@@ -176,6 +176,7 @@ RLSave_id=btnSaveRouteDetails
 #=======TaskLog============
 OperationsTab_id=a_operations
 TaskLog_id=a_TaskLog
+TaskManager_id=hlkTaskManager
 TLSearchAllJob_id=hlkOrderSearch
 TLOrderRFrom_id=txtOrderRange
 TLOrderRTo_id=txtOrderRangeTo
@@ -207,6 +208,29 @@ TLActDelTime_id=txtActDlTime_0
 TLActDelDate_id=txtActdlDate_0
 TLSign_id=txtsign
 TLEditJob_id=idEditOrder
+TLResendAl_id=btnRWResendAlert
+TLRejectAl_id=btnRWRejectAlert
+TLRAMemo_id=txtMemo
+TLMVal_xpath=//*[@ng-message="memoRequired"]
+TLDecMsg_id=lblDeclinedMsg
+TLReRouteCB_id=chkreroute_0
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 #=======ShipmentDetails
