--- a/RTE/src/main/resources/config.properties
+++ b/RTE/src/main/resources/config.properties
@@ -10,7 +10,7 @@ DEVUserName=
 DEVPassword=
 
 
-STGURL=http://10.20.104.82:8072/
+STGURL=http://10.20.104.71:8072/
 STGUserName=automation
 STGPassword=automation
 
@@ -219,7 +219,7 @@ TLERDate_id=txtActualDate
 TLERTime_id=txtActualTime
 TLERZone_xpath=//span[contains(@ng-bind,'CommitDttmTz')]
 TLVerify_id=h1kbtnverify
-TLYellowClr_xpath=//*[@id="ul5"]//a[@ng-click="parentclick(l,'YELLOW','YELLOW')"]
+TLYellowClr_xpath=//a[@ng-click="parentclick(l,'YELLOW','YELLOW')"]
 TLNORecord_xpath=//label[text()='No Records Found !']
 
 
