Changes of PU and Del stop enable disable 7th July

--- a/RTE/src/main/resources/config.properties
+++ b/RTE/src/main/resources/config.properties
@@ -223,8 +223,9 @@ TLVerify_id=h1kbtnverify
 TLYellowClr_xpath=//a[@ng-click="parentclick(l,'YELLOW','YELLOW')"]
 TLNORecord_xpath=//label[text()='No Records Found !']
 
-
-
+PUSTOP_id=txtPUStop
+DELSTOP_id=txtDelStop
+RWDetailSection_id=lblRWDetail
 
 #=======Create RTE============
 TLCreateRTE_id=btnCreateRTE
