Changes of 8th July 2022 for Copy all and Copy Next

--- a/RTE/src/main/resources/config.properties
+++ b/RTE/src/main/resources/config.properties
@@ -226,6 +226,13 @@ TLNORecord_xpath=//label[text()='No Records Found !']
 PUSTOP_id=txtPUStop
 DELSTOP_id=txtDelStop
 RWDetailSection_id=lblRWDetail
+PUCpyNextRow_id=imgACTPickupNext
+PUCPYAllRow_id=imgACTPickupAll
+DELCpyNextRow_id=imgACTDeliveryNext
+DELCPYAllRow_id=imgACTDeliveryAll
+CopySignNext_id=imgSignatureNext
+CpySignAll_id=imgSignatureAll
+
 
 #=======Create RTE============
 TLCreateRTE_id=btnCreateRTE
