Changes of 13th July for Many to Many and Many to One and Agent Details

--- a/RTE/src/main/resources/config.properties
+++ b/RTE/src/main/resources/config.properties
@@ -291,7 +291,7 @@ AgChSucMsg_xpath=//*[@class="panel-body"]//div[@id="success"]
 AgChSMsgCancel_xpath=//*[@class="panel-body"]//a[@id="anchorclose"]
 ACChargeDrop_xpath=//*[contains(@class,'form-group')]//select[@id="cmbCharge"]
 ACNotes_xpath=//*[contains(@class,'form-group')]//input[@id="txtnotes"]
-ACAddCharge_xpath=//*[contains(@class,'form-group')]//a[@id="hlkGreenAdd"]
+ACAddCharge_xpath=//*[contains(@class,'form-group')]//a[@id="hlkGreenAdd"]/i[@id="GreenAdd"]
 ACAddCError_id=errorid
 ACAddAmount_xpath=//*[contains(@class,'form-group')]//input[@id="txtchargeamount"]
 
